camera basic function

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
         
         <link href="https://fonts.googleapis.com/css?family=Kalam|Kaushan+Script|Montserrat|Permanent+Marker" rel="stylesheet">
+        <script src="../assets/js/capture.js">
+	</script>
     </head>
     <body class="w3-teal">
         <!-- Navigation Bar -->
