more styling and passport integration

--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -1,54 +1,51 @@
-<!-- Navigation Bar -->
-<div class="w3-bar w3-white w3-large">
-  <a href="home" class="w3-bar-item w3-button w3-teal w3-mobile"><i class="fa fa-street-view w3-margin-right"></i>EventBuddy</a>
-  <a href="discover" class="w3-bar-item w3-button w3-mobile">Discover</a>
-  <a href="#live" class="w3-bar-item w3-button w3-mobile">Live Events</a>
-
-  <a onclick="document.getElementById('register').style.display='block'" class="w3-bar-item w3-button w3-right w3-teal w3-mobile">Sign Up</a>
-  <a onclick="document.getElementById('login').style.display='block'" class="w3-bar-item w3-button w3-right w3-teal w3-mobile">Log In</a>
-</div>
-
-
 <!-- Content -->
-<div class="w3-container">
-<h3>Discover Events And Meet New People</h3>
-<h6>Find events anywhere in the world:</h6>
-</div>
+<div class="w3-display-container w3-content discover" style="max-width:1500px;">
+    <img class="w3-image background-image" src="assets/img/concert3.jpg" alt="concert-scene" style="min-width:1000px" width="1500">
+    <div class="w3-main" style="margin-left:250px;margin-right:40px">
+        <div class="w3-padding">
+            <h1 class="welcome">Hi {{user.fname}}!</h1>
 
-<div class="w3-row-padding w3-padding-16 w3-text-white w3-large">
-<div class="w3-half w3-margin-bottom">
-    <div class="w3-display-container">
-    <img src="assets/img/concert1.jpg" alt="Cinque Terre" style="width:100%">
-    <span class="w3-display-bottomleft w3-padding">Cinque Terre</span>
-    </div>
-</div>
-<div class="w3-half">
-    <div class="w3-row-padding" style="margin:0 -16px">
-    <div class="w3-half w3-margin-bottom">
-        <div class="w3-display-container">
-        <img src="assets/img/concert1.jpg" alt="New York" style="width:100%">
-        <span class="w3-display-bottomleft w3-padding">New York</span>
+        <div class="w3-container w3-text-white">
+            <h3>Discover Events Happening Near You</h3>
         </div>
-    </div>
-    <div class="w3-half w3-margin-bottom">
-        <div class="w3-display-container">
-        <img src="assets/img/concert1.jpg" alt="San Francisco" style="width:100%">
-        <span class="w3-display-bottomleft w3-padding">San Francisco</span>
+
+        <div class="w3-row-padding w3-padding-16 w3-text-white w3-large" style="width:100%">
+            <div class="w3-half w3-margin-bottom">
+                <div class="w3-display-container">
+                    <img src="assets/img/concert1.jpg" alt="Cinque Terre" style="width:100%">
+                    <span class="w3-display-bottomleft w3-padding">Blues On The Green</span>
+                </div>
+            </div>
+            <div class="w3-half">
+                <div class="w3-row-padding" style="margin:0 -16px">
+                    <div class="w3-half w3-margin-bottom">
+                        <div class="w3-display-container">
+                            <img src="assets/img/concert1.jpg" alt="New York" style="width:100%">
+                            <span class="w3-display-bottomleft w3-padding">Paul Simon</span>
+                        </div>
+                    </div>
+                    <div class="w3-half w3-margin-bottom">
+                        <div class="w3-display-container">
+                            <img src="assets/img/concert1.jpg" alt="San Francisco" style="width:100%">
+                            <span class="w3-display-bottomleft w3-padding">ACL</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="w3-row-padding" style="margin:0 -16px">
+                    <div class="w3-half w3-margin-bottom">
+                        <div class="w3-display-container">
+                            <img src="assets/img/concert1.jpg" alt="Pisa" style="width:100%">
+                            <span class="w3-display-bottomleft w3-padding">Queer Eye Trivia Night</span>
+                        </div>
+                    </div>
+                    <div class="w3-half w3-margin-bottom">
+                        <div class="w3-display-container">
+                            <img src="assets/img/concert1.jpg" alt="Paris" style="width:100%">
+                            <span class="w3-display-bottomleft w3-padding">Cat Power</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    </div>
-    <div class="w3-row-padding" style="margin:0 -16px">
-    <div class="w3-half w3-margin-bottom">
-        <div class="w3-display-container">
-        <img src="assets/img/concert1.jpg" alt="Pisa" style="width:100%">
-        <span class="w3-display-bottomleft w3-padding">Pisa</span>
-        </div>
-    </div>
-    <div class="w3-half w3-margin-bottom">
-        <div class="w3-display-container">
-        <img src="assets/img/concert1.jpg" alt="Paris" style="width:100%">
-        <span class="w3-display-bottomleft w3-padding">Paris</span>
-        </div>
-    </div>
     </div>
 </div>
