--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,26 +1,102 @@
 <!DOCTYPE html>
 
-    <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <title>EventBuddy</title>
+<html lang="en">
 
-    
-            <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>EventBuddy</title>
 
-            <!-- Choices.js -->
+    <!-- w3CSS/GoogleFont/Font-Awesome -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Kalam|Kaushan+Script|Montserrat|Permanent+Marker" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-teal.css">
 
-            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <!-- Choices.js -->
+    {{!--
+    <link rel="stylesheet" href="../assets/css/choices.css">
+    <script src="/../assets/js/choices.js"></script> --}}
 
-            <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
-            
-            <link href="https://fonts.googleapis.com/css?family=Kalam|Kaushan+Script|Montserrat|Permanent+Marker" rel="stylesheet">
-        </head>
-        <body class="w3-teal">
-            {{{body}}}
-        </body>
-    </html>
+    <!-- jQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <!-- users.js -->
+    <script src="/../assets/js/users.js" type="text/javascript"></script>
+
+    <!-- Our Stylesheet -->
+    <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
+</head>
+
+<!-- Sidebar/menu -->
+<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:220px;font-weight:bold;" id="mySidebar">
+    <br>
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
+    <div class="w3-container">
+        <h2 class="w3-padding-64">
+            <b></b>
+        </h2>
+    </div>
+    <div class="w3-bar-block">
+        <a href="/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
+        <a href="/signup" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Sign Up</a>
+        <a href="/discover" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Discover</a>
+        <a href="#connect" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Connect</a>
+        <div class="w3-dropdown-click w3-display-topleft w3-mobile">
+            <button onclick="myFunction()" class="w3-bar-item w3-button w3-text-white">
+                <i class="fa fa-user-circle-o w3-hover-opacity w3-xxlarge"></i>
+            </button>
+            <div id="menu" class="w3-dropdown-content w3-bar-block w3-border">
+                <a href="/login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log In</a>
+                <a href="profile" class="w3-bar-item w3-button w3-mobile myprofile">My Profile</a>
+                <button class="w3-bar-item w3-button w3-mobile" onclick="document.getElementById('settings').style.display='block'" class="w3-button">Settings</button>
+                <a href="/logout" class="w3-bar-item w3-button w3-right w3-mobile myprofile">Logout</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+
+
+<!-- Top menu on small screens -->
+<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
+    <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
+    <span>EventBuddy</span>
+</header>
+
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
+<body>
+
+    {{{body}}} {{!--
+    <!-- Footer -->
+    <footer class="w3-padding-32 w3-black w3-center w3-margin-top">
+        <h5>Find Us On</h5>
+        <div class="w3-xlarge w3-padding-16">
+            <i class="fa fa-facebook-official w3-hover-opacity"></i>
+            <i class="fa fa-instagram w3-hover-opacity"></i>
+            <i class="fa fa-snapchat w3-hover-opacity"></i>
+            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+            <i class="fa fa-twitter w3-hover-opacity"></i>
+            <i class="fa fa-linkedin w3-hover-opacity"></i>
+        </div>
+        <h6>Powered by
+            <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">Team X</a>
+        </h6>
+    </footer> --}}
+</body>
+
+</html>
+
+<script>
+    function myFunction() {
+
+        var x = document.getElementById("menu");
+        if (x.className.indexOf("w3-show") == -1) {
+            x.className += " w3-show";
+        } else {
+            x.className = x.className.replace(" w3-show", "");
+        }
+    }
+</script>
