--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,114 +1,101 @@
-<!-- Navigation Bar -->
-<div class="w3-bar w3-white w3-large">
-  <a href="/home" class="w3-bar-item w3-button w3-teal w3-mobile"><i class="fa fa-street-view w3-margin-right"></i>EventBuddy</a>
-  <a href="#survey" class="w3-bar-item w3-button w3-mobile">Discover</a>
-  <a href="#live" class="w3-bar-item w3-button w3-mobile">Live Events</a>
-  
-  <a href="register" class="w3-bar-item w3-button w3-right w3-teal w3-mobile">Sign Up</a>
-  <a onclick="document.getElementById('login').style.display='block'" class="w3-bar-item w3-button w3-right w3-teal w3-mobile">Log In</a>
-</div>
-
-<!-- Header -->
-<header class="w3-display-container w3-content" style="max-width:1500px;">
-  <img class="w3-image" src="assets/img/concert1.jpg" alt="concert-scene" style="min-width:1000px" width="1500" height="800">
-  <div class="w3-display-middle w3-padding w3-col l8 m10 happening-now">
-    <div class="w3-container w3-teal">
-      <h2><i class="fa fa-calendar w3-margin-right"></i>Profile</h2>
-      
+<!-- Content -->
+<div class="w3-display-container w3-content" style="max-width:1500px;">
+  <img class="background-image" src="assets/img/concert3.jpg" alt="concert-scene" style="min-width:1000px" width="1500">
+  <div class="w3-main" style="margin-left:250px;margin-right:40px">
+    <div class="w3-bar w3-text-white profile">
+      <h2>Hi {{user.fname}}!</h2><button onclick="document.getElementById('settings').style.display='block'" class="w3-btn w3-border w3-red">Account Details</button>    
+      <img class="w3-image w3-display-topright" id="profilepic-div" src="{{user.profilepic}}" />
     </div>
-    <div class="w3-container w3-padding-16">
-        <button class="w3-button w3-center w3-white" type="submit">Get Started</button>
-      </form>
-    </div>
-  </div>
-</header>
+    <hr width="60%">
 
-<section class="w3-row-padding" id="live">
-
-  <div class="w3-content live-stream" style="max-width:600px">
-
-    <img class="mySlides" src="assets/img/concert2.jpg" style="width:100%">
-    <img class="mySlides" src="assets/img/concert3.jpg" style="width:100%">
-    <img class="mySlides" src="assets/img/concert4.jpg" style="width:100%">
-
-  </div>
-
-</section>
-
-<!--Current Buddies-->
-
-<section class="w3-display-container w3-content discover" id="survey" style="max-width:1500px;">
-  <img class="w3-image" src="assets/img/concert2.jpg" alt="concert-scene" style="min-width:1000px" width="1500" height="800">
-  <div class="w3-display-middle w3-padding w3-col l8 m10 happening-now">
-    <div class="w3-container w3-teal">
-      <h2><i class="fa fa-calendar w3-margin-right"></i>Buddies</h2>
-         <div id="contain">
-            
-          </div>
-    </div>
-    <div class="w3-container w3-padding-16">
-        <button class="w3-button w3-center w3-white" type="submit">Connect With New Friends</button>
-      </form>
-    </div>
-  </div>
-</section>
-
-
-  <div class="w3-container">
-    <h3>Events You've Attended</h3>
-  </div>
-  
-  <div class="w3-row-padding w3-padding-16 w3-text-white w3-large">
-    <div class="w3-half w3-margin-bottom">
-      <div class="w3-display-container">
-        <img src="assets/img/concert1.jpg" alt="Cinque Terre" style="width:100%">
-        <span class="w3-display-bottomleft w3-padding">Blues On The Green</span>
+    <!--Friends-->
+    <div class="w3-container w3-text-white" id="friends">
+      <h2>Friends</h2>
+      <div>
+        <img class="friend" src="/assets/img/avatars/avatar1.png">
+        <img class="friend"  src="/assets/img/avatars/avatar1.png">
+        <img class="friend"  src="/assets/img/avatars/avatar1.png">
       </div>
+      <button class="w3-btn w3-border w3-red" type="submit">Connect With New Friends</button>
     </div>
-    <div class="w3-half">
-      <div class="w3-row-padding" style="margin:0 -16px">
+    <hr>
+
+    <!--Past Events-->
+    <div class="w3-container w3-text-white" id="past-events">
+      <h2>Events You've Attended</h2>
+      <div class="w3-row-padding w3-padding-16 w3-text-white w3-large">
         <div class="w3-half w3-margin-bottom">
           <div class="w3-display-container">
-            <img src="assets/img/concert1.jpg" alt="New York" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">Paul Simon</span>
+            <img src="assets/img/concert1.jpg" alt="Cinque Terre" style="width:100%">
+            <span class="w3-display-bottomleft w3-padding">Blues On The Green</span>
           </div>
         </div>
-        <div class="w3-half w3-margin-bottom">
-          <div class="w3-display-container">
-            <img src="assets/img/concert1.jpg" alt="San Francisco" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">ACL</span>
+        <div class="w3-half">
+          <div class="w3-row-padding" style="margin:0 -16px">
+            <div class="w3-half w3-margin-bottom">
+              <div class="w3-display-container">
+                <img src="assets/img/concert1.jpg" alt="New York" style="width:100%">
+                <span class="w3-display-bottomleft w3-padding">Paul Simon</span>
+              </div>
+            </div>
+            <div class="w3-half w3-margin-bottom">
+              <div class="w3-display-container">
+                <img src="assets/img/concert1.jpg" alt="San Francisco" style="width:100%">
+                <span class="w3-display-bottomleft w3-padding">ACL</span>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="w3-row-padding" style="margin:0 -16px">
-        <div class="w3-half w3-margin-bottom">
-          <div class="w3-display-container">
-            <img src="assets/img/concert1.jpg" alt="Pisa" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">Queer Eye Trivia Night</span>
-          </div>
-        </div>
-        <div class="w3-half w3-margin-bottom">
-          <div class="w3-display-container">
-            <img src="assets/img/concert1.jpg" alt="Paris" style="width:100%">
-            <span class="w3-display-bottomleft w3-padding">Cat Power</span>
+          <div class="w3-row-padding" style="margin:0 -16px">
+            <div class="w3-half w3-margin-bottom">
+              <div class="w3-display-container">
+                <img src="assets/img/concert1.jpg" alt="Pisa" style="width:100%">
+                <span class="w3-display-bottomleft w3-padding">Queer Eye Trivia Night</span>
+              </div>
+            </div>
+            <div class="w3-half w3-margin-bottom">
+              <div class="w3-display-container">
+                <img src="assets/img/concert1.jpg" alt="Paris" style="width:100%">
+                <span class="w3-display-bottomleft w3-padding">Cat Power</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-<!-- End page content -->
+      <!-- Profile Settings Modal -->
 
-<!-- Footer -->
-<footer class="w3-padding-32 w3-black w3-center w3-margin-top">
-  <h5>Find Us On</h5>
-  <div class="w3-xlarge w3-padding-16">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-  <h6>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">Team X</a></h6>
-</footer>
+      <div id="settings" class="w3-modal">
+        <div class="w3-modal-content">
+
+          <header class="w3-container w3-red">
+            <span onclick="document.getElementById('settings').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+            <h2>My Account</h2>
+          </header>
+
+          <div class="w3-container">
+            <table class="w3-bordered" id="account-info">
+              <tbody>
+                <tr>
+                  <th>Name:</th>
+                  <td>{{user.fname}} {{user.lname}}</td>
+                </tr>
+                <tr>
+                  <th>Email:</th>
+                  <td>{{user.email}}</td>
+                </tr>
+                <tr>
+                  <th>Phone:</th>
+                  <td>{{user.phone}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <footer class="w3-container w3-red">
+            <a href="/logout" class="w3-btn w3-red w3-border w3-right logout">Logout</a>
+            <button class="w3-btn w3-border w3-red w3-left update">Update Information</button>
+          </footer>
+
+        </div>
+      </div>
