--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -127,7 +127,7 @@
 <!-- End page content -->
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><h6 class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">Team X</a></h6></div>
+<div class="w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><h6 class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">Team X</a></h6></div>
 
 
 <script>
