--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,26 +42,14 @@
         <a href="/signup" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Sign Up</a>
         <a href="/discover" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Discover</a>
         <a href="#connect" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Connect</a>
-        <div class="w3-dropdown-click w3-display-topleft w3-mobile">
-            <button onclick="myFunction()" class="w3-bar-item w3-button w3-text-white">
-                <i class="fa fa-user-circle-o w3-hover-opacity w3-xxlarge"></i>
-            </button>
-            <div id="menu" class="w3-dropdown-content w3-bar-block w3-border">
-                <a href="/login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Log In</a>
-                <a href="profile" class="w3-bar-item w3-button w3-mobile myprofile">My Profile</a>
-                <button class="w3-bar-item w3-button w3-mobile" onclick="document.getElementById('settings').style.display='block'" class="w3-button">Settings</button>
-                <a href="/logout" class="w3-bar-item w3-button w3-right w3-mobile myprofile">Logout</a>
-            </div>
-        </div>
     </div>
 </nav>
-
 
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-    <span>EventBuddy</span>
+    <span><h3>EventBuddy</h3></span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -69,22 +57,8 @@
 
 <body>
 
-    {{{body}}} {{!--
-    <!-- Footer -->
-    <footer class="w3-padding-32 w3-black w3-center w3-margin-top">
-        <h5>Find Us On</h5>
-        <div class="w3-xlarge w3-padding-16">
-            <i class="fa fa-facebook-official w3-hover-opacity"></i>
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-snapchat w3-hover-opacity"></i>
-            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-            <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
-        </div>
-        <h6>Powered by
-            <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">Team X</a>
-        </h6>
-    </footer> --}}
+    {{{body}}}
+
 </body>
 
 </html>
