--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,11 +6,14 @@
 			<div id="signup-form" style="width:75%">
 				<h2> Sign Up</h2>
 				<img src="../assets/img/avatars/avatar6.png" alt="Avatar" style="width:25%" class="w3-circle w3-margin-top">
+				
 				<!-- show any messages that come back with authentication -->
-				{{#if this.message}}
-				<div>Hello!</div>
-				<div class="alert alert-danger">{{this.message}}</div>
-				{{/if}}
+			{{#if message}}
+       			<div class="w3-display-container w3-red w3-card-4 alert">
+           			<span onclick="this.parentElement.style.display='none'" class="w3-button w3-display-topright close-alert">&times;</span>{{message}}
+        		</div>
+        	{{/if}}
+				
 				<!-- Registration FORM -->
 				<form class="w3-padding" action="/signup" method="post">
 					<div class="w3-section">
