added functional camera

--- a/views/account-setup.handlebars
+++ b/views/account-setup.handlebars
@@ -20,7 +20,7 @@
             <input type="text" name="fname" id="fname" placeholder="First Name" />
             <input type="text" name="lname" id="lname" placeholder="Last Name" />
             <input type="text" name="phone" id="phone" placeholder="Phone" />
-            <input type="text" name="email" id="email" placeholder="Phone" />
+            <input type="text" name="email" id="email" placeholder="email" />
             <input type="text" name="profilepic" id="profilepic" placeholder="Add A Link To Your Profile Picture">
             <input type="button" name="previous" class="previous action-button" value="Previous" />
             <input type="button" name="next" class="next action-button" value="Next" />
