--- a/views/event-checkin.handlebars
+++ b/views/event-checkin.handlebars
@@ -1,7 +1,15 @@
-<div>
-	<h1>
-		EVENT SOCIAL STREAM!
-    </h1>
+<!-- Content -->
+<script src="/../assets/js/capture.js"></script>
+<div class="w3-display-container w3-content discover" style="max-width:1500px;">
+    <img class="w3-image background-image" src="assets/img/concert3.jpg" alt="concert-scene" style="min-width:1000px" width="1500">
+    <div class="w3-main" style="margin-left:250px;margin-right:40px">
+        <div class="w3-padding">
+            <h1 class="welcome">Hi {{user.fname}}!</h1>
+
+        <div class="w3-container w3-text-white">
+            <h3>EVENT SOCIAL STREAM!</h3>
+        </div>
+    <div>
     <br />
   <canvas id="canvas">
   </canvas>
@@ -12,4 +20,7 @@
   <div class="output">
     <img id="photo" alt="The screen capture will appear in this box."> 
   </div>
+</div>
+        
+    </div>
 </div>
