--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -3,8 +3,8 @@
   <img class="w3-image background-image" src="assets/img/concert3.jpg" alt="concert-scene" style="min-width:1000px" width="1500">
   <div class="w3-main" style="margin-left:250px;margin-right:40px">
     <div class="w3-padding w3-text-white">
-      <h1 class="display-4 text-center">404 Not Found
-        <span role="img" aria-label="Face with rolling eyes">🙄</span>
+      <h1 class="display-4 text-center">Whoops! Page not found.
+        <span role="img">🧞‍</span>
       </h1>
       <a href="/">← Back To Home</a>
     </div>
