--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -3,10 +3,8 @@
     <img class="w3-image background-image" src="assets/img/concert3.jpg" alt="concert-scene" style="min-width:1000px" width="1500">
     <div class="w3-main" style="margin-left:250px;margin-right:40px">
         <div class="w3-padding">
-            <h1 class="welcome">Hi {{user.fname}}!</h1>
-
         <div class="w3-container w3-text-white">
-            <h3>Discover Events Happening Near You</h3>
+            <h1 class="w3-text-white" id="logo">Discover Events Happening Near You</h1>
         </div>
 
         <div class="w3-row-padding w3-padding-16 w3-text-white w3-large" style="width:100%">
