Added handlebars for events

--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -5,47 +5,19 @@
         <div class="w3-padding">
             <h1 class="welcome">Hi {{user.fname}}!</h1>
 
-        <div class="w3-container w3-text-white">
-            <h3>Discover Events Happening Near You</h3>
-        </div>
-
-        <div class="w3-row-padding w3-padding-16 w3-text-white w3-large" style="width:100%">
-            <div class="w3-half w3-margin-bottom">
-                <div class="w3-display-container">
-                    <img src="assets/img/concert1.jpg" alt="Cinque Terre" style="width:100%">
-                    <span class="w3-display-bottomleft w3-padding">Blues On The Green</span>
-                </div>
+            <div class="w3-container w3-text-white">
+                <h3>Discover Events Happening Near You</h3>
             </div>
-            <div class="w3-half">
-                <div class="w3-row-padding" style="margin:0 -16px">
-                    <div class="w3-half w3-margin-bottom">
-                        <div class="w3-display-container">
-                            <img src="assets/img/concert1.jpg" alt="New York" style="width:100%">
-                            <span class="w3-display-bottomleft w3-padding">Paul Simon</span>
-                        </div>
-                    </div>
-                    <div class="w3-half w3-margin-bottom">
-                        <div class="w3-display-container">
-                            <img src="assets/img/concert1.jpg" alt="San Francisco" style="width:100%">
-                            <span class="w3-display-bottomleft w3-padding">ACL</span>
-                        </div>
+
+            <div class="w3-row-padding w3-padding-16 w3-text-white w3-large" style="width:100%">
+                {{#each events}}
+                <div class="w3-half w3-margin-bottom">
+                    <div class="w3-display-container">
+                        <img src="{{image.medium.url}}" style="width:100%">
+                        <span class="w3-display-bottomleft w3-padding">{{title}}</span>
                     </div>
                 </div>
-                <div class="w3-row-padding" style="margin:0 -16px">
-                    <div class="w3-half w3-margin-bottom">
-                        <div class="w3-display-container">
-                            <img src="assets/img/concert1.jpg" alt="Pisa" style="width:100%">
-                            <span class="w3-display-bottomleft w3-padding">Queer Eye Trivia Night</span>
-                        </div>
-                    </div>
-                    <div class="w3-half w3-margin-bottom">
-                        <div class="w3-display-container">
-                            <img src="assets/img/concert1.jpg" alt="Paris" style="width:100%">
-                            <span class="w3-display-bottomleft w3-padding">Cat Power</span>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
             </div>
         </div>
     </div>
-</div>
