--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -102,7 +102,7 @@
   <div class="w3-row-padding"></div>
   
   <!-- Contact -->
-  <div class="w3-container" id="connect" style="margin-top:75px">
+  {{!-- <div class="w3-container" id="connect" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Connect.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <h6>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</h6>
@@ -121,7 +121,7 @@
       </div>
       <button type="submit" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom">Send Message</button>
     </form>  
-  </div>
+  </div> --}}
 
 <!-- End page content -->
 
