--- a/views/event-checkin.handlebars
+++ b/views/event-checkin.handlebars
@@ -7,13 +7,17 @@
         <h1 class="welcome">Hi {{user.fname}}!</h1>
         <div class="w3-container w3-text-white">
             <h3>EVENT SOCIAL STREAM!</h3>
-            <div>
-                <br />
+            <div class="w3-half">
+                <br /><div class="w3-card w3-hover-shadow w3-center">
+                <h3>Event shots!</h3>
                 <canvas id="canvas">
                 </canvas>
+                </div>
+                <div class="w3-card w3-hover-shadow w3-center">
                 <div class="camera">
                     <video id="video">Video stream not available.</video>
                     <p><button id="startbutton">Take photo</button></p>
+                </div>
                 </div>
             </div>
         </div>
