minor tweaks to menu

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,7 +54,7 @@
                 </div>
             </div>
         {{else}}
-            <a href="/login" onclick="w3_close()" class="w3-btn w3-hover-white" id="login">Log In</a>      
+            <a href="/login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" id="login">Log In</a>      
             <a href="/signup" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Sign Up</a>
         {{/if}}
             <a href="/discover" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Discover</a>
