--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -38,6 +38,10 @@ body {font-size:16px;}
   justify-content: space-evenly;
 }
 
+.info {
+  height: 80%;
+}
+
 .myprofile, #login {
   z-index: 6;
   color: white;
@@ -65,20 +69,16 @@ body {font-size:16px;}
 }
 
 #event-result {
-  padding: 20px;
+  margin: 20px;
 }
 
 #event-title {
-  width: 14em; 
+  width: 15em; 
   overflow: hidden; /* make sure it hides the content that overflows */
   white-space: nowrap; /* don't break the line */
   text-overflow: ellipsis;
   display: inline-block;
-  padding: 20px;
-  background: rgb(255, 255, 255, .8);
   font-family: 'Permanent Marker', cursive;
-  display: flex;
-  /* justify-content: center; */
 }
 
 #mini-logo {
@@ -90,8 +90,8 @@ body {font-size:16px;}
   border-radius: 50%;
   max-height: 170px;
   padding: 5px;
-  border: #da2525;
-  border-width: 2px;
+  border: #ffffff;
+  border-width: 1px;
   margin: 20px;
   border-style: groove;
 }
