--- a/views/account-setup.handlebars
+++ b/views/account-setup.handlebars
@@ -1,7 +1,7 @@
 <!-- Account Set Up -->
 <div class="w3-display-container w3-content" style="max-width:1500px;">
-  <img class="w3-image background-image" src="assets/img/concert3.jpg" alt="concert-scene" style="height: 100%;">
   <div class="w3-main" style="margin-left:250px;margin-right:40px">
+    <img class="w3-image background-image" src="assets/img/concert3.jpg" alt="concert-scene" style="min-width:1000px" width="1500" height= "100%;">
     <div class="w3-padding">
       <div class="w3-container" id="account-setup" style="max-width: 600px;">
         <form id="msform">
