--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -188,6 +188,7 @@ body {font-size:16px;}
     margin-top: 280px;
     margin-bottom: 280px;
     border-collapse: collapse;
+    overflow-y:hidden;
   }
   #table_scroll thead th {
     padding: 10px;
