--- a/views/event-list.handlebars
+++ b/views/event-list.handlebars
@@ -1,8 +1,6 @@
 <!-- Navigation Bar -->
-
-<script type="text/javascript" src="http://api.eventful.com/js/api"></script>
-
-<script src = "../assets/js/api.js"></script>
+       <script type="text/javascript" src="https://api.eventful.com/js/api"></script>
+    <script src="/../assets/js/api.js" type="text/javascript"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -184,6 +182,7 @@
 
 <script>
 
+apiCall();
 
          
 </script>
