--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -1,5 +1,6 @@
 <!-- Content -->
 <div class="w3-display-container w3-content discover" style="max-width:1500px;">
+    <input type="hidden" id="user-id" value="{{user.id}}">
     <img class="w3-image background-image" src="assets/img/concert3.jpg" alt="concert-scene" style="min-width:1000px" width="1500">
     <div class="w3-main" style="margin-left:250px;margin-right:40px">
         <div class="w3-padding">
@@ -9,51 +10,18 @@
             <div class="w3-hide w3-center" id="loading">
                 <img src="/assets/img/loading.gif" style="position:fixed" width="100px">
             </div>
+            {{#if userLoggedIn}}
             <button class="w3-btn w3-text-white w3-border get-events w3-right">Search Events</button>
+            {{else}}
+            <div class="w3-container w3-text-white">
+                <h2>Please log in to search events!</h2>
+                <a href="/login" onclick="w3_close()" class="w3-btn w3-border w3-hover-white" id="login">Log In</a>      
+            </div>
+            {{/if}}
             <!-- Photo grid (modal) -->
             <div class="w3-row w3-row-padding">
-
-                <div class="w3-table w3-card results-table w3-hoverable w3-white w3-padding">
-                    
+                <div class="w3-table w3-card results-table w3-hoverable w3-white w3-padding">  
                 </div>
-
-
-                {{!-- <div class="w3-third">
-                    <div class="w3-display-container display1">
-                    </div>
-                    <div class="w3-display-container display2">
-                    </div>
-                    <div class="w3-display-container display3">
-                    </div>
-                    <div class="w3-display-container display4">
-                    </div>
-                    <div class="w3-display-container display5">
-                    </div>
-                </div>
-                <div class="w3-third">
-                    <div class="w3-display-container display6">
-                    </div>
-                    <div class="w3-display-container display7">
-                    </div>
-                    <div class="w3-display-container display8">
-                    </div>
-                    <div class="w3-display-container display9">
-                    </div>
-                    <div class="w3-display-container display10">
-                    </div>
-                </div>
-                <div class="w3-third">
-                    <div class="w3-display-container display11">
-                    </div>
-                    <div class="w3-display-container display12">
-                    </div>
-                    <div class="w3-display-container display13">
-                    </div>
-                    <div class="w3-display-container display14">
-                    </div>
-                    <div class="w3-display-container display15">
-                    </div>
-                </div> --}}
             </div>
 
             <!-- Modal for full size images on click-->
