--- a/views/event-list.handlebars
+++ b/views/event-list.handlebars
@@ -2,7 +2,7 @@
        <script type="text/javascript" src="https://api.eventful.com/js/api"></script>
     <script src="/../assets/js/api.js" type="text/javascript"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+{{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
 
@@ -14,7 +14,7 @@
 
     <a onclick="document.getElementById('register').style.display='block'" class="w3-bar-item w3-button w3-right w3-teal w3-mobile">Sign Up</a>
     <a onclick="document.getElementById('login').style.display='block'" class="w3-bar-item w3-button w3-right w3-teal w3-mobile">Log In</a>
-</div>
+</div> --}}
 
 
 <!-- Content -->
